# checkin-platform

./: .env.example  .gitignore  DESIGN.md  GOAL-ADVISOR.md  GOAL-RUST.md  GOAL.md  README.md  camera_issue_fix.md  docker-compose.yml
.github/workflows/: ci.yml
advisor-plans/: 001-active-stack-verification.md  002-rust-quality-gates.md  003-security-containment.md  004-real-face-pipeline.md  005-frame-inference-scheduling.md  006-enrollment-integrity.md  007-mediamtx-pipeline.md  008-live-websocket-state.md  009-truthful-metrics-scene.md  010-rust-employee-csv-contracts.md  011-app-timezone.md  012-enrollment-ux.md  013-browser-video-state.md  014-responsive-accessible-ui.md  015-low-cost-hotspots.md  016-dynamic-camera-wall.md  017-attendance-explainability.md  018-employee-edit-deactivate.md  019-mediamtx-upgrade.md  README.md
apps/api/: requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/routers/: attendance.py  auth.py  cameras.py  employees.py  health.py  ws.py
apps/api/app/services/: enroll.py
apps/api/app/services/attendance/: daily.py  fsm.py  service.py
apps/api/app/services/gallery/: service.py
apps/api/app/services/vision/: embed.py  engine.py  match.py  quality.py  track.py  vote.py  worker.py
apps/api/app/ws/: hub.py
apps/api/tests/: conftest.py  test_attendance_api.py  test_daily.py  test_embed.py  test_enroll_api.py  test_forbidden_stack.py  test_fsm.py  test_health_ws.py  test_match.py  test_quality_track_vote.py  test_worker_pipeline.py
apps/edge/: Cargo.toml  README.md
apps/edge/configs/: mediamtx.yml
apps/edge/crates/pksp-api/: Cargo.toml
apps/edge/crates/pksp-api/src/: auth.rs  error.rs  lib.rs  routes.rs  state.rs
apps/edge/crates/pksp-api/tests/: api_contract.rs  employee_contract.rs  enrollment.rs  security.rs  startup.rs  timezone.rs  websocket.rs
apps/edge/crates/pksp-api/tests/common/: mod.rs
apps/edge/crates/pksp-cli/: Cargo.toml
apps/edge/crates/pksp-cli/src/: main.rs
apps/edge/crates/pksp-core/: Cargo.toml
apps/edge/crates/pksp-core/src/: daily.rs  embed.rs  fsm.rs  lib.rs  match_.rs  quality.rs  scene.rs  track.rs  vote.rs
apps/edge/crates/pksp-db/: Cargo.toml
apps/edge/crates/pksp-db/src/: lib.rs
apps/edge/crates/pksp-media/: Cargo.toml
apps/edge/crates/pksp-media/src/: lib.rs
apps/edge/crates/pksp-vision/: Cargo.toml
apps/edge/crates/pksp-vision/src/: align.rs  lib.rs  scrfd.rs  zones.rs
apps/edge/crates/pksp-vision/tests/: real_model.rs
apps/edge/docs/: benches.md  deploy.md  media-rust-bindings.md
apps/edge/migrations/: 001_init.sql  002_remove_incompatible_embeddings.sql  003_event_snapshots.sql
apps/edge/scripts/: download-binaries.sh  smoke-media.sh  test-download-binaries.sh  verify-pinned-download.sh
apps/web/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: camera-wall.test.tsx  dashboard.test.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/attendance/: attendance-explainability.test.tsx  attendance-timezone.test.tsx  page.tsx
apps/web/src/app/employees/: page.performance.test.tsx  page.tsx
apps/web/src/app/employees/[id]/: employee-detail.test.tsx  page.test.tsx  page.tsx
apps/web/src/app/employees/new/: page.test.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: AppShell.tsx  CameraTile.test.tsx  CameraTile.tsx  EventMatchReveal.test.tsx  EventMatchReveal.tsx  EventTicker.test.tsx  EventTicker.tsx  FaceHudCanvas.performance.test.tsx  FaceHudCanvas.tsx  GuidedFaceCapture.test.tsx  GuidedFaceCapture.tsx  LicenseBanner.tsx  MetricPill.tsx  MonoClock.test.tsx  MonoClock.tsx  StatusBadge.tsx  guidedCaptureMath.test.ts  guidedCaptureMath.ts
apps/web/src/hooks/: useCameraSessions.test.tsx  useCameraSessions.tsx  useHealth.test.ts  useHealth.ts  useLiveWs.test.ts  useLiveWs.ts
apps/web/src/lib/: api.test.ts  api.ts  dateTime.test.ts  dateTime.ts  structure.ts  types.ts  whep.test-support.ts  whep.test.ts  whep.ts
apps/web/src/test/: accessibility.test.tsx  harness.test.tsx
benchmarks/: chokepoint.md
configs/: mediamtx.yml  zones.cam_in.json
plans/: 00-overview.md  01-architecture.md  02-tech-stack.md  03-vision-pipeline.md  04-attendance-logic.md  05-data-model.md  06-api-and-realtime.md  07-frontend-ui.md  08-infra-and-deploy.md  09-security-privacy.md  10-implementation-roadmap.md  11-verification.md  README.md
rust-port-plans/: 00-README.md  01-current-system-inventory.md  02-target-architecture.md  03-crate-matrix-and-research.md  04-data-and-migrations.md  05-api-ws-contract-parity.md  06-core-logic-port.md  07-vision-engine-and-models.md  08-vision-worker-and-smart-scene.md  09-media-plane.md  10-api-server-and-state.md  11-frontend-integration.md  12-migration-and-cutover.md  13-verification-and-benchmarks.md  14-implementation-roadmap.md  15-risks-and-open-questions.md
scripts/: chokepoint_benchmark.sh  demo_rtsp.sh  dev-stack.sh  download_models.sh  seed_demo.py  seed_demo_faces.sh
