[package]
name = "pksp-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pksp-core = { workspace = true }
pksp-db = { workspace = true }
pksp-vision = { workspace = true }
pksp-media = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
