[package]
name = "pksp-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pksp-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono-tz = { workspace = true }
