[package]
name = "pksp-vision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pksp-core = { workspace = true }
pksp-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
ort = { version = "2.0.0-rc.12", default-features = true }
